# nwdsl

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: faq.md  openspec-integration.md  patterns.md  reference.md  tutorial.md
docs/adr/: 0001-prior-art-survey.md  0002-new-yaml-dsl.md  0003-runtime-python.md  0004-core-schema.md  0005-layout-bfs-orientation.md  0006-path-visualization.md  0007-renderer-strategy.md  0008-invariant-renderer.md  0009-segment-nesting.md  0010-redundancy-groups.md  0011-routing-domains.md  0012-directed-logical.md
docs/notes/: architecture-image-prompt.md  handoff-layout-and-paths.md  phase0-survey-log.md
examples/branch-20/: generate.py  network.yaml
examples/complex-lan/: network.yaml
examples/hq-dc-cloud/: network.yaml
examples/sample-corp/: network.yaml
examples/scale-50/: generate.py  network.yaml
examples/stack-core/: network.yaml
examples/stress/: generate.py  lag.yaml  leafspine.yaml  multisite.yaml  ring.yaml
examples/two-site-ipsec/: network.yaml
schema/: nwdsl.schema.json
scripts/: install_d2.ps1  regen_examples.py
src/nwdsl/: __init__.py  cli.py  graph.py  loader.py  model.py  render_d2.py  render_mermaid.py  render_svg.py  svg_layout.py  tables.py  validate.py  webapp.py
src/nwdsl/static/: playground.html
tests/: test_examples_fresh.py  test_ps1_encoding.py  test_redundancy_routing.py  test_render.py  test_svg.py  test_tables_cli.py  test_validate.py  test_webapp.py
