[project]
name = "nwdsl"
version = "0.3.0"
description = "ネットワーク構成記述DSL: YAMLソースから構成図(D2/Mermaid/内蔵SVG)と設計書向け表(Markdown)を生成する"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/thinas1115/nwdsl"
Repository = "https://github.com/thinas1115/nwdsl"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
nwdsl = "nwdsl.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nwdsl = ["static/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
